--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 </head>
 
 <body>
+    <!--   landing-->
     <section class="row landing">
-        <div class="text large-4 columns">
+        <div class="text large-6 text-center columns">
             <h3>African Imprint<br>Fashion</h3>
         </div>
     </section>
-    <section class="row about">
-        <div class="text large-4 columns">
-            <h3>African Imprint<br>Fashion</h3>
+
+    <!--    about -->
+    <section class="row large-12 cols about">
+        <div class="large-6 image cols">
+            <img src="img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
+        </div>
+        <div class="large-6 cols about-text">
+            <img src="img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
         </div>
     </section>
 
