--- a/index.html
+++ b/index.html
@@ -20,15 +20,22 @@
     </section>
 
     <!--    about -->
-    <section class="row large-12 cols about">
-        <div class="large-6 image cols">
-            <img src="img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
-        </div>
-        <div class="large-6 cols about-text">
-            <img src="img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
-        </div>
-    </section>
+    <section class="row" id="about">
 
+        <div class="small-12 columns ">
+            <div class="large-6 columns small-12 image">
+                <img class="imgr
+                " src="/img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
+            </div>
+
+            <div class="large-6 columns small-12 image">
+                <img class="imgr
+                " src="/img/img2.jpg" alt="">
+            </div>
+
+        </div>
+
+    </section>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
