--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
 
     <!--    about -->
     <section class="row" id="about">
+        <div class="small-12 large-12 columns">
+            <div class="small-12 large-4 imge1 columns">
+                <img src="img/img4.jpg" alt="">
+            </div>
+            <div class="small-12 large-4 imge columns">
+                <img src="img/img2.jpg" alt="">
+            </div>
+            <div class="small-12 large-4 imge columns">
+                <img src="img/img2.jpg" alt="">
+            </div>
+        </div>
 
+    </section>
+    <section class="row small-12 columns">
         <div class="small-12 columns ">
             <div class="large-6 columns small-12 image">
                 <img class="imgr
@@ -30,7 +43,7 @@
 
             <div class="large-6 columns small-12 image">
                 <img class="imgr
-                " src="/img/img2.jpg" alt="">
+                " src="/img/img3.jpg" alt="">
             </div>
 
         </div>
