--- a/index.html
+++ b/index.html
@@ -19,21 +19,19 @@
         </div>
     </section>
 
-    <!--    about -->
-    <section class="row large-12 cols about">
-        <div class="large-6 image cols">
-            <img src="img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
-        </div>
-        <div class="large-6 cols about-text">
-            <img src="img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
-        </div>
-    </section>
 
+<section class="contacts">
+
+
+
+    </section>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
 </body>
+
+
 
 </html>
