--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <section class="contacts">
 
+<div class="row">
+  <div class="small-2 large-4 columns"><h5>SocialMedia</h5></div>
+  <div class="small-4 large-4 columns"><h5>Visit Us</h5></div>
+  <div class="small-6 large-4 columns"><h5>Imprint</h5></div>
+</div>
 
 
     </section>
