--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <section class="contacts">
 
 <div class="row">
-  <div class="small-2 large-4 columns"><h5>SocialMedia</h5></div>
-  <div class="small-4 large-4 columns"><h5>Visit Us</h5></div>
-  <div class="small-6 large-4 columns"><h5>Imprint</h5></div>
+  <div class="small-2 large-4 columns"><h4>Stay Connected</h4></div>
+  <div class="small-4 large-4 columns"><h4>Visit Us</h4></div>
+  <div class="small-6 large-4 columns"><h4>Imprint</h4></div>
 </div>
 
 
