--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>African Imprint Fasion</title>
     <link href='https://fonts.googleapis.com/css?family=Oregano' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
@@ -23,7 +25,7 @@
 <section class="contacts">
 
 <div class="row">
-  <div class="small-2 large-4 columns"><h4>Stay Connected</h4></div>
+  <div class="small-2 large-4 columns"><h4>Stay Connected</h4><i class="fa fa-facebook" aria-hidden="true"></i></div>
   <div class="small-4 large-4 columns"><h4>Visit Us</h4></div>
   <div class="small-6 large-4 columns"><h4>Imprint</h4></div>
 </div>
