--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <section class="contacts">
 
 <div class="row">
-  <div class="small-2 large-4 columns"><h4>Stay Connected</h4><i class="fa fa-facebook" aria-hidden="true"></i></div>
+  <div class="small-2 large-4 columns"><h4>Stay Connected</h4>
+     <i class="fa fa-facebook-square" aria-hidden="true"></i></div>
   <div class="small-4 large-4 columns"><h4>Visit Us</h4></div>
   <div class="small-6 large-4 columns"><h4>Imprint</h4></div>
 </div>
