--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>African Imprint Fasion</title>
     <link href='https://fonts.googleapis.com/css?family=Oregano' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
@@ -26,7 +26,11 @@
 
 <div class="row">
   <div class="small-2 large-4 columns"><h4>Stay Connected</h4>
-     <i class="fa fa-facebook-square" aria-hidden="true"></i></div>
+     <i class="fa fa-facebook-square" aria-hidden="true"></i>
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+      <i class="fa fa-instagram" aria-hidden="true"></i>
+      <i class="fa fa-phone-square" aria-hidden="true"></i>
+    </div>
   <div class="small-4 large-4 columns"><h4>Visit Us</h4></div>
   <div class="small-6 large-4 columns"><h4>Imprint</h4></div>
 </div>
