--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 <div class="row">
   <div class="small-2 large-4 columns"><h4>Stay Connected</h4>
-     <i class="fa fa-facebook-square" aria-hidden="true"></i>
-     <i class="fa fa-twitter" aria-hidden="true"></i>
-      <i class="fa fa-instagram" aria-hidden="true"></i>
+
+     <i class="fa fa-twitter" aria-hidden="true"></i> <br>
+      <i class="fa fa-instagram" aria-hidden="true"></i> <br>
    <i class="fa fa-facebook" aria-hidden="true"></i>
     </div>
   <div class="small-4 large-4 columns"><h4>Visit Us</h4></div>
