--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
       <i class="fa fa-instagram" aria-hidden="true"></i> <br>
    <i class="fa fa-facebook" aria-hidden="true"></i>
     </div>
-  <div class="small-4 large-4 columns"><h4>Visit Us</h4></div>
-  <div class="small-6 large-4 columns"><h4>Imprint</h4></div>
+  <div class="small-4 large-4 columns"><h4>Visit Us</h4>
+
+    <h1>Ngong Lane Plaza </h1><br>
+      <h1>Third Floor Room 22</h1>
+    </div>
+  <div class="small-6 large-4 columns"><h4>Imprint</h4>
+
+    <br> <h1> "Where Fashion Lives"</h1>
+
+    </div>
 </div>
 
 
