--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   <div class="small-4 large-4 columns"><h4>Visit Us</h4>
 
-    <h1>Ngong Lane Plaza </h1><br>
+    <h1>Ngon'g Lane Plaza </h1><br>
       <h1>Third Floor Room 22</h1>
     </div>
   <div class="small-6 large-4 columns"><h4>Imprint</h4>
