--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section class="row landing">
         <div class="text large-6 text-center columns">
             <h3>African Imprint<br>Fashion</h3>
+
         </div>
     </section>
 
@@ -72,7 +73,18 @@
 
     </div>
 </div>
+       <section class= "footer">
+    <div class="row footer">
+  <div class="small-2 large-4 columns"><br></div>
+  <div class="small-4 large-4 columns"> Copyright:2016</div>
+  <div class="small-6 large-4 columns"><br></div>
+</div>
+
     </section>
+    </section>
+
+
+
 
 
 
