--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 
 <body>
     <!--   landing-->
+    <section class="section section--menu" id="Prospero">
+
+
+  <nav class="menu menu--prospero">
+
+    <ul class="menu__list">
+      <li class="menu__item menu__item--current">
+        <a class="menu__link">Home</a>
+      </li>
+      <li class="menu__item">
+        <a class="menu__link">About</a>
+      </li>
+      <li class="menu__item">
+        <a class="menu__link">Contact</a>
+      </li>
+
+    </ul>
+
+  </nav>
+</section>
     <section class="row landing">
         <div class="text large-6 text-center columns">
             <h3>African Imprint<br>Fashion</h3>
@@ -58,9 +78,9 @@
     <div class="row">
   <div class="small-2 large-4 columns"><h4>Stay Connected</h4>
 
-     <i class="fa fa-twitter" aria-hidden="true"></i> <br>
-      <i class="fa fa-instagram" aria-hidden="true"></i> <br>
-   <i class="fa fa-facebook" aria-hidden="true"></i>
+      <i class="fa fa-twitter" aria-hidden="true"></i><a href="https://www.twitter.com">twitter</a><br>
+      <i class="fa fa-instagram" aria-hidden="true"></i><a href="http://www.instagram.com">instagram</a> <br>
+      <i class="fa fa-facebook" aria-hidden="true"></i> <a href="https://www.facebook.com">facebook </a>
     </div>
   <div class="small-4 large-4 columns"><h4>Visit Us</h4>
 
