--- a/index.html
+++ b/index.html
@@ -7,71 +7,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>African Imprint Fasion</title>
     <link href='https://fonts.googleapis.com/css?family=Oregano' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
+
     <!--   landing-->
-    <section class="row landing">
+    <section class="row small-12 columns landing">
         <div class="text large-6 text-center columns">
             <h3>African Imprint<br>Fashion</h3>
         </div>
     </section>
 
-<section class="contacts">
+    <section class="contacts">
 
 
-    <!--    about -->
-    <section class="row" id="about">
-        <div class="small-12 large-12 columns">
-            <div class="small-12 large-4 imge1 columns">
-                <img src="img/img4.jpg" alt="">
+        <!--    about -->
+        <section class="row" id="about">
+            <div class="small-12 large-12 columns">
+                <div class="small-12 large-4 imge1 columns">
+                    <img src="img/img4.jpg" alt="">
+                </div>
+                <div class="small-12 large-4 imge columns">
+                    <img src="img/img2.jpg" alt="">
+                </div>
+                <div class="small-12 large-4 imge columns">
+                    <img src="img/img2.jpg" alt="">
+                </div>
             </div>
-            <div class="small-12 large-4 imge columns">
-                <img src="img/img2.jpg" alt="">
-            </div>
-            <div class="small-12 large-4 imge columns">
-                <img src="img/img2.jpg" alt="">
-            </div>
-        </div>
 
-    </section>
-    <section class="row small-12 columns">
-        <div class="small-12 columns ">
-            <div class="large-6 columns small-12 image">
-                <img class="imgr
+        </section>
+        <section class="row small-12 columns">
+            <div class="small-12 columns ">
+                <div class="large-6 columns small-12 image">
+                    <img class="imgr
                 " src="/img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
-            </div>
+                </div>
 
-            <div class="large-6 columns small-12 image">
-                <img class="imgr
+                <div class="large-6 columns small-12 image">
+                    <img class="imgr
                 " src="/img/img3.jpg" alt="">
+                </div>
+
             </div>
 
+        </section>
+        <div class="row">
+            <div class="small-2 large-4 columns">
+                <h4>Stay Connected</h4>
+
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <br>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <br>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </div>
+            <div class="small-4 large-4 columns">
+                <h4>Visit Us</h4>
+
+                <h1>Ngon'g Lane Plaza </h1>
+                <br>
+                <h1>Third Floor Room 22</h1>
+            </div>
+            <div class="small-6 large-4 columns">
+                <h4>Imprint</h4>
+
+                <br>
+                <h1> "Where Fashion Lives"</h1>
+
+            </div>
         </div>
-
-    </section>
-    <div class="row">
-  <div class="small-2 large-4 columns"><h4>Stay Connected</h4>
-
-     <i class="fa fa-twitter" aria-hidden="true"></i> <br>
-      <i class="fa fa-instagram" aria-hidden="true"></i> <br>
-   <i class="fa fa-facebook" aria-hidden="true"></i>
-    </div>
-  <div class="small-4 large-4 columns"><h4>Visit Us</h4>
-
-    <h1>Ngon'g Lane Plaza </h1><br>
-      <h1>Third Floor Room 22</h1>
-    </div>
-  <div class="small-6 large-4 columns"><h4>Imprint</h4>
-
-    <br> <h1> "Where Fashion Lives"</h1>
-
-    </div>
-</div>
     </section>
 
 
