--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <body>
 
 	<!--   landing-->
-	<section class="row small-12 columns landing">
 
-		<section class="section section--menu" id="Prospero">
+	<section class="row landing">
 
-
+		<div class="row">
 			<nav class="menu menu--prospero">
 
 				<ul class="menu__list">
@@ -37,101 +36,87 @@
 				</ul>
 
 			</nav>
-		</section>
-		<section class="row landing">
+		</div>
+		<div class="row">
 			<div class="text large-6 text-center columns">
 				<h3>African Imprint<br>Fashion</h3>
 
 			</div>
-		</section>
-
-		<section class="contacts">
-
-
-			<!--    about -->
-			<section class="row" id="about">
-				<div class="small-12 large-12 columns">
-					<div class="small-12 large-4 imge1 columns">
-						<img src="img/img4.jpg" alt="">
-					</div>
-					<div class="small-12 large-4 imge columns">
-						<img src="img/img2.jpg" alt="">
-					</div>
-					<div class="small-12 large-4 imge columns">
-						<img src="img/img2.jpg" alt="">
-					</div>
-				</div>
-
-			</section>
-			<section class="row small-12 columns">
-				<div class="small-12 columns ">
-					<div class="large-6 columns small-12 image">
-						<img class="imgr
-                " src="/img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
-					</div>
-
-					<div class="large-6 columns small-12 image">
-						<img class="imgr
-                " src="/img/img3.jpg" alt="">
-					</div>
-
-				</div>
-
-			</section>
-			<div class="row">
-				<div class="small-2 large-4 columns">
-					<h4>Stay Connected</h4>
-					<i class="fa fa-twitter" aria-hidden="true"></i>
-					<br>
-					<i class="fa fa-instagram" aria-hidden="true"></i>
-					<br>
-					<i class="fa fa-facebook" aria-hidden="true"></i>
-				</div>
-				<div class="small-4 large-4 columns">
-					<h4>Visit Us</h4>
-
-					<i class="fa fa-twitter" aria-hidden="true"></i><a href="https://www.twitter.com">twitter</a>
-					<br>
-					<i class="fa fa-instagram" aria-hidden="true"></i><a href="http://www.instagram.com">instagram</a>
-					<br>
-					<i class="fa fa-facebook" aria-hidden="true"></i> <a href="https://www.facebook.com">facebook </a>
-				</div>
-				<div class="small-4 large-4 columns">
-					<h4>Visit Us</h4>
-
-					<h1>Ngon'g Lane Plaza </h1>
-					<br>
-					<h1>Third Floor Room 22</h1>
-				</div>
-				<div class="small-6 large-4 columns">
-					<h4>Imprint</h4>
-
-					<br>
-					<h1> "Where Fashion Lives"</h1>
-
-				</div>
-			</div>
-		</section>
-
-		<section class="footer">
-			<div class="row footer">
-				<div class="small-2 large-4 columns">
-					<br>
-				</div>
-				<div class="small-4 large-4 columns"> Copyright:2016</div>
-				<div class="small-6 large-4 columns">
-					<br>
-				</div>
-			</div>
-
-		</section>
+		</div>
 	</section>
 
 
 
 
+	<!--    about -->
+	<section class="row" id="about">
+		<div class="small-12 large-12 columns">
+			<div class="small-12 large-4 imge1 columns">
+				<img src="img/img4.jpg" alt="">
+			</div>
+			<div class="small-12 large-4 imge columns">
+				<img src="img/img2.jpg" alt="">
+			</div>
+			<div class="small-12 large-4 imge columns">
+				<img src="img/img2.jpg" alt="">
+			</div>
+		</div>
 
+	</section>
+	<section class="row small-12 columns">
+		<div class="small-12 columns ">
+			<div class="large-6 columns small-12 image">
+				<img class="imgr
+                " src="/img/tumblr_ly9rs5KIFg1r3vyzb.jpg" alt="">
+			</div>
 
+			<div class="large-6 columns small-12 image">
+				<img class="imgr
+                " src="/img/img3.jpg" alt="">
+			</div>
+
+		</div>
+
+	</section>
+	<section class="contacts">
+		<div class="row">
+			<div class="small-2 large-4 columns">
+				<h4>Stay Connected</h4>
+				<i class="fa fa-twitter" aria-hidden="true"></i>
+				<br>
+				<i class="fa fa-instagram" aria-hidden="true"></i>
+				<br>
+				<i class="fa fa-facebook" aria-hidden="true"></i>
+			</div>
+			<div class="small-4 large-4 columns">
+				<h4>Visit Us</h4>
+
+				<h1>Ngon'g Lane Plaza </h1>
+				<br>
+				<h1>Third Floor Room 22</h1>
+			</div>
+			<div class="small-6 large-4 columns">
+				<h4>Imprint</h4>
+
+				<br>
+				<h1> "Where Fashion Lives"</h1>
+
+			</div>
+		</div>
+	</section>
+
+	<section class="row footer">
+		<div class="footer">
+			<div class="small-2 large-4 columns">
+				<br>
+			</div>
+			<div class="small-4 large-4 columns"> Copyright:2016</div>
+			<div class="small-6 large-4 columns">
+				<br>
+			</div>
+		</div>
+
+	</section>
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/what-input.js"></script>
 	<script src="js/vendor/foundation.js"></script>
