--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
                 <ul class="menu__list">
                     <li class="menu__item menu__item--current">
-                        <a class="menu__link">Home</a>
+                        <a class="menu__link"><h2>Home</h2></a>
                     </li>
                     <li class="menu__item">
-                        <a href="#about" class="menu__link">About</a>
+                        <a href="#about" class="menu__link"><h2>About</h2></a>
                     </li>
                     <li class="menu__item">
-                        <a href="#contact" class="menu__link">Contact</a>
+                        <a href="#contact" class="menu__link"><h2>Contact</h2></a>
                     </li>
 
                 </ul>
@@ -67,6 +67,7 @@
 
     </section>
     <section id="images1">
+
         <div class="row img1 expanded">
             <div class="small-12 large-12 large-up-3 columns">
                 <figure class="snip1477 columns">
