--- a/index.html
+++ b/index.html
@@ -165,14 +165,15 @@
             <div class="small-2 large-4 columns icons">
                 <!--               <h4>Stay Connected</h4>-->
 
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <h6>Tweet Us</h6>
+                <i class="fa fa-twitter tweet" aria-hidden="true">
+                    <h6>Tweet Us</h6></i>
 
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <h6>Follow Us</h6>
-                <br>
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-instagram insta" aria-hidden="true">
+                    <h6>Follow Us</h6></i>
+
+                <i class="fa fa-facebook face" aria-hidden="true">
                 <h6>Like Us</h6>
+                </i>
 
             </div>
             <div class="small-4 large-4 columns building">
