--- a/index.html
+++ b/index.html
@@ -164,16 +164,20 @@
         <div class="row">
             <div class="small-2 large-4 columns icons">
                 <!--               <h4>Stay Connected</h4>-->
+                <ul class="list">
+                    <li>
 
-                <i class="fa fa-twitter tweet" aria-hidden="true">
-                    <h6>Tweet Us</h6></i>
-
-                <i class="fa fa-instagram insta" aria-hidden="true">
-                    <h6>Follow Us</h6></i>
-
-                <i class="fa fa-facebook face" aria-hidden="true">
+                        <i class="fa fa-twitter tweet" aria-hidden="true">
+                    <h6>Tweet Us</h6></i></li>
+                    <li>
+                        <i class="fa fa-instagram insta" aria-hidden="true">
+                    <h6>Follow Us</h6></i></li>
+                    <li>
+                        <i class="fa fa-facebook face" aria-hidden="true">
                 <h6>Like Us</h6>
                 </i>
+                    </li>
+                </ul>
 
             </div>
             <div class="small-4 large-4 columns building">
